tests/expectations/compiler/core/cheatcodes/invalid_cheatcodes_fail.out
Error [ETYC0372005]: Unknown variable `test_dep.aleo/account`
    --> compiler-test:16:30
     |
  16 |     CheatCode::print_mapping(test_dep.aleo/account);
     |                              ^^^^^^^^^^^^^^^^^^^^^
